@@ -198,6 +198,7 @@
     <Compile Include="SeLogger.cs" />
     <Compile Include="SubtitleFormats\OgmChapters.cs" />
     <Compile Include="SubtitleFormats\JsonType14.cs" />
+    <Compile Include="SubtitleFormats\Sptx.cs" />
     <Compile Include="SubtitleFormats\TimedText200604Ooyala.cs" />
     <Compile Include="SubtitleFormats\TranscriptiveJson.cs" />
     <Compile Include="SubtitleFormats\UnknownSubtitle88.cs" />
